@@ -435,10 +435,21 @@ t + 1/3*t^3 - 1/2*t^4 + 14/15*t^5 - 1/6*t^6 - 76/315*t^7 - 7/10*t^8 + 7547/1
 00*t^16 + O(t^17)
 x + 1/3*x^3 - 1/2*x^4 + 14/15*x^5 + O(x^6)
 t + 1/3*t^3 - 1/2*t^4 + 14/15*t^5 + O(t^6)
+  ***   at top-level: ellformalw(e,0)
+  ***                 ^---------------
+  *** ellformalw: domain error in ellformalw: precision <= 0
+  ***   at top-level: ellformalw(e,-1)
+  ***                 ^----------------
+  *** ellformalw: domain error in ellformalw: precision <= 0
 [2^-2 + 2^-1 + 1 + 2 + O(2^2), 1 + 2 + 2^2 + 2^3 + O(2^4)]
 [3 + 2*3^2 + 3^4 + O(3^5), 2*3^4 + 3^5 + O(3^8)]
 [3*5 + 5^2 + 2*5^3 + 3*5^4 + O(5^5), 5^2 + 4*5^4 + O(5^6)]
 [0, 0]
+  ***   at top-level: ellpadicheight(E,P,1
+  ***                 ^--------------------
+  *** ellpadicheight: domain error in ellpadicheight: precision <= 0
 [2*3^2 + 2*3^3 + 3^4 + 3^5 + 3^6 + O(3^7), 2*3^2 + 3^4 + 2*3^5 + 3^6 + O(3^7
 )]
-Total time spent: 468
+[2^3 + 2^5 + O(2^9), 2^5 + 2^6 + 2^7 + 2^8 + O(2^9)]
+[2^3 + 2^5 + O(2^8), 2^5 + 2^6 + O(2^7)]
+Total time spent: 464
